updated scripts for data analysis

--- a/tests/fel_modulation.ipynb
+++ b/tests/fel_modulation.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,14 +338,14 @@
      "output_type": "stream",
      "text": [
       "reading  fel-modulation_initial.h5\n",
-      "have read 500 particles.\n",
-      "3.969995088745236e-06\n",
+      "have read 200 particles.\n",
+      "4.954285759439334e-06\n",
       "\n",
       "reading  fel-modulation_final.h5\n",
-      "have read 500 particles.\n",
-      "1.9999346707735448\n",
+      "have read 200 particles.\n",
+      "4.954285759439334e-06\n",
       "\n",
-      "-0.06008463724059254 0.060116167097028494\n"
+      "0.0 0.0\n"
      ]
     }
    ],
@@ -359,6 +359,75 @@
     "print()\n",
     "dg = final.gamma-initial.gamma\n",
     "print(np.min(dg),np.max(dg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.11443356e-05,  3.79345335e-05,  9.49386040e-05,  3.82529444e-05,\n",
+       "        9.37979646e-08, -1.91649800e-05,  6.71578375e-07, -3.44708632e-05,\n",
+       "       -7.07069957e-05, -3.20922176e-05,  9.74446392e-05, -5.33972651e-05,\n",
+       "       -1.41190032e-05, -3.25911800e-05,  4.15600466e-05, -4.17892316e-05,\n",
+       "       -7.33064017e-05, -3.90463422e-05, -3.68708244e-05,  4.27253901e-05,\n",
+       "       -2.86441824e-05, -7.13309974e-06,  1.02753931e-05,  2.67347379e-05,\n",
+       "       -5.74260218e-07,  4.93909366e-05, -2.15380963e-06,  6.73440146e-05,\n",
+       "       -6.12204655e-05, -7.59620589e-05, -1.14888182e-04, -1.39290156e-05,\n",
+       "        1.33533470e-05, -4.34439592e-05,  5.07437291e-05,  3.57592560e-05,\n",
+       "        5.55956426e-05, -6.07868130e-06,  2.59702438e-05,  2.71827323e-05,\n",
+       "       -2.24648685e-05,  2.00591561e-05,  3.75382314e-05, -4.94871013e-05,\n",
+       "        8.72290473e-06,  7.08631790e-05, -7.67505414e-05,  7.38200635e-06,\n",
+       "        3.76235057e-05, -1.43372189e-05, -8.69622427e-05, -6.41819754e-05,\n",
+       "        3.41414651e-05,  3.11448194e-05, -2.08524324e-05, -4.97891408e-05,\n",
+       "       -2.51253646e-05,  2.24001710e-05, -2.82729697e-05,  8.75684928e-06,\n",
+       "        2.63701695e-06,  5.13440283e-06,  7.22139728e-05, -7.42725061e-05,\n",
+       "       -5.70103380e-05, -3.11750457e-05, -2.88709648e-05,  6.96775313e-05,\n",
+       "        4.87621021e-05,  2.41147799e-05,  6.32522875e-05, -2.37408449e-05,\n",
+       "       -5.82306888e-05, -4.45787053e-05,  7.83428119e-05, -2.78170117e-05,\n",
+       "       -1.10516963e-04,  6.18426966e-05,  5.37017032e-05,  1.50070700e-06,\n",
+       "       -5.17165660e-05,  7.11822004e-05,  2.53236891e-05,  4.80699674e-06,\n",
+       "       -2.05387072e-05,  1.01755647e-04, -2.33814600e-05,  1.43071370e-05,\n",
+       "       -1.03326884e-05,  8.78991309e-05,  6.32651395e-06,  1.07304711e-04,\n",
+       "        2.31409270e-05, -7.22951339e-05,  7.59814131e-06, -8.16194253e-05,\n",
+       "        7.14073640e-06, -1.19303457e-05, -3.31568342e-05, -4.87598540e-05,\n",
+       "       -4.58251673e-06, -7.30419245e-06,  7.12004769e-05, -4.97078922e-05,\n",
+       "       -2.19459948e-06, -6.20367347e-05,  3.10266403e-05, -8.14954111e-05,\n",
+       "        1.00431224e-04, -1.20098932e-05, -3.62544401e-05,  5.00136619e-05,\n",
+       "        2.49038803e-05, -1.65424097e-05,  2.46114295e-07,  5.57335819e-05,\n",
+       "       -6.02397281e-06,  5.38636694e-05,  6.39869369e-05, -1.21806347e-05,\n",
+       "        2.73275213e-05,  6.15526079e-05, -2.23770777e-05,  5.86700071e-05,\n",
+       "        5.46020006e-05,  2.14541231e-05,  4.03167481e-06,  4.18280394e-05,\n",
+       "        7.01239404e-05, -7.47613951e-05, -1.04284174e-04, -4.93383987e-05,\n",
+       "        5.32933928e-05,  6.29722289e-05, -2.45824575e-05,  1.02308639e-04,\n",
+       "       -2.67966196e-05, -4.16573995e-05,  2.65693616e-05,  1.05473954e-05,\n",
+       "       -1.20279838e-04,  3.81750290e-05,  6.56737916e-05,  2.96232879e-05,\n",
+       "       -2.40674634e-07, -2.24427999e-05, -8.83845678e-05,  2.14228069e-05,\n",
+       "       -4.01967753e-05, -6.65337936e-05,  7.84316021e-05,  4.83789390e-05,\n",
+       "        4.99553513e-05,  8.41834122e-05,  4.29748577e-06,  4.92991839e-06,\n",
+       "       -2.27053100e-05,  5.88616641e-05, -3.89877840e-05,  1.22442935e-05,\n",
+       "        1.01850913e-04,  5.74089958e-05, -4.86621062e-05,  2.43340500e-05,\n",
+       "        5.82988486e-05,  2.61085215e-05, -9.40094857e-05, -3.58877233e-05,\n",
+       "       -3.77711320e-05, -2.51999332e-05, -4.17593099e-05, -2.74860327e-05,\n",
+       "        3.02255893e-05,  3.98686851e-05,  7.10498452e-05, -2.99715620e-05,\n",
+       "        6.22249325e-06,  4.02373551e-05,  6.74786183e-05,  3.80764681e-05,\n",
+       "       -8.57251682e-05,  5.77089917e-05, -4.16768246e-05,  3.49345295e-05,\n",
+       "        3.80042742e-05,  1.10768990e-04, -3.07163278e-05, -5.03007873e-05,\n",
+       "       -1.63585393e-05, -1.88711464e-05,  4.51383947e-05,  9.02851032e-05,\n",
+       "        9.52014336e-05,  1.07158377e-04,  6.64135851e-05, -1.33158660e-05,\n",
+       "       -2.38535395e-05, -5.65356463e-05,  8.44637958e-05, -3.52055904e-05])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final.z"
    ]
   },
   {
